--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Live class project 6</title>
+    <!-- Title -->
+    <title>Static Webpage Templete 06</title>
     <!-- css links -->
     <link rel="stylesheet" href="css\general.css" />
     <link rel="stylesheet" href="css\nav.css" />
